# CMSIS_5

CMSIS/DAP/Firmware/Include/: DAP.h
CMSIS/DAP/Firmware/Source/: SW_DP.c
CMSIS/DAP/Firmware/test/: CMakeLists.txt  DAP_config.h  device.h  main.c
